--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,5 @@ pr:
 
 jobs:
   - template: ./.azure/linux-stack.yml
-#  - template: ./.azure/windows-stack.yml
+  - template: ./.azure/windows-stack.yml
   - template: ./.azure/linux-bench.yml
