--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -47,7 +47,7 @@ jobs:
       stack install alex --stack-yaml $STACK_YAML
       stack install cabal-install --stack-yaml $STACK_YAML
       # GHC 8.10.1 fails with ghc segfaults, using -fexternal-interpreter seems to make it working
-      # There are another transient errors like time outs downloading from stackage so we retry 3 times
+      # There are other transient errors like timeouts downloading from stackage so we retry 3 times
       if [ "$STACK_YAML" = "stack8101.yaml" ]; then
         stack build --only-dependencies --stack-yaml $STACK_YAML --ghc-options="-fexternal-interpreter" || stack build --only-dependencies --stack-yaml $STACK_YAML --ghc-options="-fexternal-interpreter" || stack build --only-dependencies --stack-yaml $STACK_YAML  --ghc-options="-fexternal-interpreter"
       else
